--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@rollup/plugin-inject": "^5.0.3",
+        "jquery": "^3.6.3",
+        "jquery-validation": "^1.19.5"
     }
 }
