--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@glidejs/glide": "^3.6.0",
         "@rollup/plugin-inject": "^5.0.3",
         "jquery": "^3.6.3",
         "jquery-validation": "^1.19.5"
